# tappd-simulator

./: .gitignore  Cargo.toml  Dockerfile  README.md  make_quote.c
.github/workflows/: ci.yml
dcap-attestation/: main.py  pyproject.toml
dcap-attestation/src/dcap_attestation/: api.py  cert.py  crud.py  database.py  models.py  quote.py
rpc/proto/: tappd_rpc.proto
sdk/js/: package.json
sdk/js/src/: index.ts
sdk/js/src/__tests__/: index.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/dstack_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
src/: config.rs  http_routes.rs  main.rs  rocket_helper.rs  rpc_call.rs  rpc_service.rs
src/ra_tls/: cert.rs  kdf.rs
